trying to fix whitespace

--- a/_sass/minima/ryan-dracula.scss
+++ b/_sass/minima/ryan-dracula.scss
@@ -224,7 +224,7 @@ p code{
 code, pre {
  overflow-x: scroll !important;
  overflow-y: scroll !important;
- white-space: nowrap !important;
+//  white-space: nowrap !important;
  -webkit-overflow-scrolling: touch !important;
 }
 
